added header structure

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
   <!--container start-->
   <div class="container">
     <!--header section start-->
-    <header>      
+    <header>
+      <div class="wrapper">
+        <h1>
+          <a href="#FIXME" title="Logo">
+            <img src="https://via.placeholder.com/130x30" alt="Logo">
+          </a>
+        </h1>
+        <nav>
+          <a href="#FIXME" class="start" title="Start">start</a>
+          <a href="#FIXME" class="restart" title="Restart">restart</a>
+        </nav>
+      </div>
     </header>
     <!--header section end-->
     <!--main section start-->
