added priorities-section and footer structure

--- a/index.html
+++ b/index.html
@@ -35,10 +35,51 @@
     <!--header section end-->
     <!--main section start-->
     <main>
+      <section class="priorities">
+        <div class="wrapper">
+          <h2>set your priorities</h2>
+          <ul>
+            <li class="high">
+                <h3>high</h3>
+                <div class="drop"></div>
+            </li>
+            <li class="medium">
+                <h3>medium</h3>
+                <div class="drop"></div>
+            </li>
+            <li class="low">
+                <h3>low</h3>
+                <div class="drop"></div>
+            </li>
+          </ul>
+
+          <ul>
+            <li>
+              <a href="#FIXME" class="task one" title="Task">task 1</a>
+            </li>
+            <li>
+              <a href="#FIXME" class="task two" title="Task">task 2</a>
+            </li>
+            <li>
+              <a href="#FIXME" class="task three" title="Task">task 3</a>
+            </li>
+            <li>
+              <a href="#FIXME" class="task four" title="Task">task 4</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!--main section end-->
     <!--footer section start-->
     <footer>      
+      <div class="wrapper">
+        <h1>
+          <a href="#FIXME" title="Logo">
+            <img src="https://via.placeholder.com/130x30" alt="Logo">
+          </a>
+        </h1>
+      </div>    
     </footer>
     <!--footer section end-->
   </div>
