--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
           </a>
         </h1>
         <nav>
-          <a href="#FIXME" class="start" title="Start">start</a>
-          <a href="#FIXME" class="restart" title="Restart">restart</a>
+          <ul>
+            <li><a href="#FIXME" class="start" title="Start">start</a></li>
+            <li><a href="#FIXME" class="restart" title="Restart">restart</a></li>
+          </ul>
         </nav>
       </div>
     </header>
