--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@
           <ul>
             <li class="high">
                 <h3>high</h3>
-                <div class="drop"></div>
+                <ul class="drop"></ul>
             </li>
             <li class="medium">
                 <h3>medium</h3>
-                <div class="drop"></div>
+                <ul class="drop"></ul>
             </li>
             <li class="low">
                 <h3>low</h3>
-                <div class="drop"></div>
+                <ul class="drop"></ul>
             </li>
           </ul>
 
           <ul>
             <li>
-              <a href="#FIXME" class="task one" title="Task">task 1</a>
+              <a href="#FIXME" class="task one" title="Task" draggable="false">task 1</a>
             </li>
             <li>
-              <a href="#FIXME" class="task two" title="Task">task 2</a>
+              <a href="#FIXME" class="task two" title="Task" draggable="false">task 2</a>
             </li>
             <li>
-              <a href="#FIXME" class="task three" title="Task">task 3</a>
+              <a href="#FIXME" class="task three" title="Task" draggable="false">task 3</a>
             </li>
             <li>
-              <a href="#FIXME" class="task four" title="Task">task 4</a>
+              <a href="#FIXME" class="task four" title="Task" draggable="false">task 4</a>
             </li>
           </ul>
         </div>
